tests/assignement/to_str.rev
var str = 1 // error: missing variable name after 'var' keyword in declaration